python-app/template/k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: ci-cd-app
  labels:
    # Labels help identify and select resources
    name: ci-cd-app
    app: ci-cd-app
