python-app/template/k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cicd-deployment
  namespace: ci-cd-app
  labels:
    app: python-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: python-app
  template:
    metadata:
      labels:
        app: python-app
    spec:
      # Credentials for pulling images from private Docker Hub repo
      imagePullSecrets:
        - name: docker-registry-secret

      containers:
      - name: python-app
        image: docker.io/mehabadi/test:ci-cd
        ports:
        - containerPort: 5000
---
apiVersion: v1
kind: Service
metadata:
  name: cicd-service
  namespace: ci-cd-app
spec:
  type: NodePort
  selector:
    app: python-app
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 5000
      nodePort: 30100
